update list account has bug
