# gapi/rpc_create_account.go
@@ -1,0 +1,41 @@
+package gapi
+
+import (
+	"context"
+	"github.com/lib/pq"
+	db "github.com/vexsx/Simple-Bank/db/sqlc"
+	"github.com/vexsx/Simple-Bank/pb"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+)
+
+func (server *Server) CreateAccount(ctx context.Context, req *pb.CreateAccountRequest) (*pb.CreateAccountResponse, error) {
+
+	authPayload, err := server.authorizeUser(ctx)
+	if err != nil {
+		return nil, unauthenticatedError(err)
+	}
+
+	arg := db.CreateAccountParams{
+		Owner:    authPayload.Username,
+		Currency: req.Currency,
+		Balance:  0,
+	}
+
+	account, err := server.store.CreateAccount(ctx, arg)
+	if err != nil {
+		if pqErr, ok := err.(*pq.Error); ok {
+			switch pqErr.Code.Name() {
+			case "accounts_owner_fkey", "unique_violation":
+				return nil, status.Errorf(codes.PermissionDenied, "%s", err)
+			}
+		}
+		return nil, status.Errorf(codes.Internal, "%s", err)
+	}
+
+	rsp := &pb.CreateAccountResponse{
+		Account: convertAccount(account),
+	}
+
+	return rsp, nil
+}
